<?xml version="1.0"?>
<package>
  <name>dvrk_gazebo</name>
  <version>0.0.0</version>
  <description>The dvrk_gazebo package</description>

  <maintainer email="asagrawal@wpi.edu">Ankur Agrawal</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>dvrk_kinematics</run_depend>
  <run_depend>dvrk_joint_publisher</run_depend>
  <run_depend>dvrk_model</run_depend>
  <run_depend>dvrk_pcl</run_depend>
  <run_depend>dvrk_robot</run_depend>
  <run_depend>dvrk_teleop</run_depend>


  <run_depend>xacro</run_depend>


    <export>
  </export>
</package>
