<?xml version="1.0"?>
<package>
  <name>dvrk_gazebo</name>
  <version>0.0.0</version>
  <description>The dvrk_gazebo package</description>

  <maintainer email="asagrawal@wpi.edu">Ankur Agrawal</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
 
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>xacro</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />

  </export>
</package>
